# graphicspipe

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/graphicspipe/: input_state.py  main.py  math.py  mesh.py  renderer.py  torus_controller.py
