[project]
name = "graphicspipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FelipePassarela", email = "126916744+FelipePassarela@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.0",
]

[project.scripts]
graphicspipe = "graphicspipe.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
