[project]
name = "graphicspipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FelipePassarela", email = "126916744+FelipePassarela@users.noreply.github.com" }
]
requires-python = ">=3.9,<3.10"
dependencies = [
    "numba>=0.47.0",
    "numpy>=1.12.1",
    "pynput>=1.7.2",
    "scipy>=0.19.1",
]

[project.scripts]
graphicspipe = "graphicspipe.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
